--- a/kvs/Cargo.toml
+++ b/kvs/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [lib]
 name = "kvs_lib"
