--- a/kvs/Cargo.toml
+++ b/kvs/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+crc = "3.2.1"
+regex = "1.10.5"
 
 [lib]
 name = "kvs_lib"
