--- a/kvs/Cargo.toml
+++ b/kvs/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 crc = "3.2.1"
 regex = "1.10.5"
+sha2 = "0.10"
 
 [lib]
 name = "kvs_lib"
